fix crash when importing unsupported macro content, related fdo#59374

Change-Id: I960c8174454074fd9ddb27fb17244d782c4cb24c
Reviewed-on: https://gerrit.libreoffice.org/8038
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>